# category_encoders

./: .buildinfo  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  Target Encoder Smoothing.ipynb  backward_difference.html  basen.html  binary.html  cat_encoders.ipynb  catboost.html  catenc.code-workspace  circle.yml  config.yml  count.html  encoding_examples.py  genindex.html  glmm.html  gray.html  hashing.html  heirarchical_example.numbers  helmert.html  index.html  jamesstein.html  leaveoneout.html  mestimate.html  objects.inv  onehot.html  ordinal.html  polynomial.html  pyproject.toml  quantile.html  rankhot.html  requirements-dev.txt  requirements.txt  search.html  (+10 more)
.doctrees/: backward_difference.doctree  basen.doctree  binary.doctree  catboost.doctree  count.doctree  environment.pickle  glmm.doctree  gray.doctree  hashing.doctree  helmert.doctree  index.doctree  jamesstein.doctree  leaveoneout.doctree  mestimate.doctree  onehot.doctree  ordinal.doctree  polynomial.doctree  quantile.doctree  rankhot.doctree  sum.doctree  summary.doctree  targetencoder.doctree  woe.doctree  wrapper.doctree
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.ipynb_checkpoints/: cat_encoders-checkpoint.ipynb
_modules/: index.html
_sources/: backward_difference.rst.txt  binary.rst.txt  glmm.rst.txt  gray.rst.txt  hashing.rst.txt  helmert.rst.txt  index.rst.txt  jamesstein.rst.txt  polynomial.rst.txt  quantile.rst.txt  rankhot.rst.txt  targetencoder.rst.txt
_static/: documentation_options.js
docs/: Makefile  (+1 more)
(+1340 files in other folders)
